--- a/myVivaio/index.html
+++ b/myVivaio/index.html
@@ -4,15 +4,33 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Il tuo vivaio</title>
-
+    <link rel="icon" href="http://i.imgur.com/4ZjzDjb.png" type="image/png" />
+    <title>Passiflora</title>
+    <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet"> 
     <link href="bootstrap/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
   </head>
   <body>
+  <div class="container">
+      <div class="row">
+        <div class="col-mid-12">
+            <!-- <img src="http://i.imgur.com/guFnhM6.png" alt="fiori"> -->
+            <div class="passiflora">Passiflora</div>
 
-	
+            
+
+        </div>
+      </div>
+  </div>
+
+  <footer class="footer">
+      <div class ="container">
+          <p class="footer_uno"> web design: Ilenia Chiari | web developer: Vasile Funica </p>
+      </div>
+  </footer>
+  
+
+  
   
   </body>
 </html>
