--- a/myVivaio/index.html
+++ b/myVivaio/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-mid-12">
             <!-- <img src="http://i.imgur.com/guFnhM6.png" alt="fiori"> -->
-            <div class="passiflora">Passiflora</div>
+            <div class="passiflora"><span class="titolo">Passiflora<span></div>
 
             
 
