--- a/myVivaio/index.html
+++ b/myVivaio/index.html
@@ -17,8 +17,36 @@
             <!-- <img src="http://i.imgur.com/guFnhM6.png" alt="fiori"> -->
             <div class="passiflora"><span class="titolo">Passiflora<span></div>
 
-            
+<!-- INIZIO NAVBAR -->
+            <div class="navbar-wrapper">
+              <div class="container">
 
+                <nav class="navbar navbar-inverse navbar-static-top">
+                  <div class="container white">
+                    <div class="navbar-header">
+                      <img src="passiflora.png">
+                        <button type="button" class="navbar-toggle collapsed sfo_blue"        data-toggle="collapse" data-target="#navbar" aria-expanded="false"        aria-controls="navbar">
+                          <span class="sr-only">Toggle navigation</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                      <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="gallery.html"><span class="blue">Gallery</span></a></        li>
+                        <li><a href="news.html"><span class="blue">News</span></a></li>
+                        <li><a href="contact.html"><span class="blue">Contact</span></a></        li>
+                        <li><a href="admin.html"><span class="blue">Login</span></a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </nav>
+
+              </div>
+            </div>
+<!-- FINE NAVBAR -->
         </div>
       </div>
   </div>
