--- a/myVivaio/index.html
+++ b/myVivaio/index.html
@@ -35,10 +35,10 @@
                     <div id="navbar" class="navbar-collapse collapse">
                       <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="gallery.html"><span class="blue">Gallery</span></a></        li>
-                        <li><a href="news.html"><span class="blue">News</span></a></li>
-                        <li><a href="contact.html"><span class="blue">Contact</span></a></        li>
-                        <li><a href="admin.html"><span class="blue">Login</span></a></li>
+                        <li><a href=""><span class="blue">Chi siamo</span></a></li>
+                        <li><a href="piante.php"><span class="blue">Prodotti</span></a></li>
+                        <li><a href=""><span class="blue">Contact</span></a></li>
+                        <li><a href=""><span class="blue">Login</span></a></li>
                       </ul>
                     </div>
                   </div>
