Modifiche sql e div

--- a/myVivaio/pianteEsterno.html
+++ b/myVivaio/pianteEsterno.html
@@ -31,9 +31,9 @@ home contatti forum login
 </div>
 
 <!-- INIZIO BOX IMMAGINI -->
-<div id="main1" class="col-md-9" style="padding-left:22%; text-align:center;">
-<div class="row" style="padding-top:5%;">
-<div class="col-md-9"> </div>
+<div id="main1" class="col-md-1" style="padding-left:22%; text-align:center;">
+<!-- <div class="row" style="padding-top:5%;"> -->
+<!-- <div class="col-md-9"> </div> -->
 </div>
 
 <div class="row" style="padding-top:7%;">
