--- a/myVivaio/index.html
+++ b/myVivaio/index.html
@@ -46,7 +46,7 @@
                    
                    <li class="active"><a href="#">Home</a></li>
                    <li><a href="#">Chi siamo</a></li>
-                   <li><a href="#">Prodotti</a></li>
+                   <li><a href="pianteEsterno.html">Prodotti</a></li>
                    <li><a href="#">Contatti</a></li>
                    <li><a href="#">Forum</a></li>
                    <li><a href="login.php">Login</a></li>
