Modifiche al menù

--- a/myVivaio/index.html
+++ b/myVivaio/index.html
@@ -45,8 +45,21 @@
                 <ul class="nav navbar-nav">
                    
                    <li class="active"><a href="#">Home</a></li>
-                   <li><a href="#">Chi siamo</a></li>
-                   <li><a href="pianteEsterno.html">Prodotti</a></li>
+                   <li><a href="">Chi siamo</a></li>
+                   <li><a href="">
+                            <div class="dropdown">
+                              <button class="dropbtn">Prodotti</button>
+                              <div class="dropdown-content">
+                                <a href="#">Alberi alto fusto</a>
+                                <a href="#">Alberi da frutta</a>
+                                <a href="#">Fiori da esterno</a>
+                                <a href="#">Orto</a>
+                                <a href="#">Piante aromatiche</a>
+                                <a href="#">Piante da interno</a>
+                                <a href="#">Rose</a>
+                              </div>
+                            </div>  
+                   </a></li>
                    <li><a href="#">Contatti</a></li>
                    <li><a href="#">Forum</a></li>
                    <li><a href="login.php">Login</a></li>
@@ -73,7 +86,6 @@
       </div>
   </footer>
   
-
   
   
   </body>
