--- a/myVivaio/index.html
+++ b/myVivaio/index.html
@@ -62,7 +62,7 @@
                    </a></li>
                    <li><a href="#">Contatti</a></li>
                    <li><a href="#">Forum</a></li>
-                   <li><a href="login.php">Login</a></li>
+                   <li><a href="piante.php">Login</a></li>
                 </ul>
             </div>
             </div>
