--- a/myVivaio/azienda.html
+++ b/myVivaio/azienda.html
@@ -11,6 +11,7 @@
 
     <link href="bootstrap/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/esternoStyle.css"> 
+    <link rel="stylesheet" type="text/css" href="css/menu.css"> 
   </head>
   <body>
 
@@ -21,9 +22,20 @@
 </div>
 
 <!-- INIZIO MENU -->
-<div class="wrapper">home contatti prodotti login</div>
-
-
+<nav class="navbar navbar-default">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div id="menu1">
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav">  
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="azienda.html">Chi siamo</a></li>
+                <li><a href="prodotti.php">Prodotti</a></li>
+                <li><a href="contatti.html">Contatti</a></li>
+                <li><a href="login.php">Login</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <!-- INIZIO BOX IMMAGINI -->
 <div class="container">
 <!-- <div id="main1" class="col-md-9" style="padding-left:22%; text-align:center;"></div> -->
